Compilation/test/correct/test3_correct.tpc
int a;
char b;

int printf(void){
	return a + b;
}

void zeekf(int aaa, int aa){
	printf();
}

int main(void){
	int aaa, aa;
	aaa = 5;
	aa =12;
	a = 3;
	b = 'c';
	print(1);

	zeekf(aaa, aa);
	return a;
	
}